--- a/app/src/main/res/layout/activity_delete_account_view.xml
+++ b/app/src/main/res/layout/activity_delete_account_view.xml
@@ -6,13 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C4C4C4"
-    tools:context=".ui.content.emergency.ui.EmergencyView">
+    tools:context=".ui.content.settings.SettingsView">
 
-    <ImageView
-        android:src="@drawable/barangay_image"
-        android:layout_width="500dp"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"/>
+
 
     <LinearLayout
         android:id="@+id/top"
@@ -40,7 +36,7 @@
 
         <!-- Centered Breaking News Text -->
         <TextView
-            android:text="Emergency"
+            android:text="Delete Account"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -66,36 +62,75 @@
 
     </LinearLayout>
 
-    <EditText
-        android:elevation="10dp"
-        android:layout_marginTop="20dp"
-        android:textColor="#666161"
-        android:padding="15dp"
-        android:textSize="15sp"
-        android:hint="Search"
-        android:drawableEnd="@drawable/baseline_search_24"
+    <LinearLayout
+        android:layout_marginTop="100dp"
         android:layout_below="@+id/top"
-        android:background="@drawable/login_field_bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+
+                android:layout_marginStart="20dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:text="Want to Delete Account ?"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+            </TextView>
+
+            <RelativeLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/_deleteAccountTxt"
+                    android:layout_marginTop="20dp"
+                    android:padding="10dp"
+                    android:layout_marginStart="32dp"
+                    android:textSize="15sp"
+                    android:hint="Enter &quot;Confirm&quot; to delete Account"
+
+                    android:background="@drawable/details_bg"
+                    android:layout_width="350dp"
+                    android:layout_height="45dp">
+
+                </EditText>
+
+
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <TextView
+
+        android:id="@+id/_deleteAccountBtn"
+        android:background="@drawable/login_btn_bg"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:text="Delete Account"
         android:layout_centerHorizontal="true"
-        android:id="@+id/_search"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:ems="10"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@+id/_search"
-        android:id="@+id/_emergencyItem"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_width="350dp"
-        android:layout_height="match_parent"/>
-
-
+        android:layout_alignParentBottom="true"
+        android:layout_width="300dp"
+        android:layout_marginBottom="100dp"
+        android:layout_height="40dp">
+    </TextView>
 
     <include
         layout="@layout/_layout_navigation_bar"
         android:id="@+id/buttom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
 
 </RelativeLayout>
