--- a/app/src/main/res/layout/activity_family_member_view.xml
+++ b/app/src/main/res/layout/activity_family_member_view.xml
@@ -59,19 +59,40 @@
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-
+    <ScrollView
         android:layout_below="@+id/top"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/_familyItem"
-        android:layout_marginTop="20dp"
-        android:layout_width="350dp"
-        android:layout_height="match_parent"/>
-
-    <include
-        layout="@layout/_layout_navigation_bar"
-        android:id="@+id/buttom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/_familyItem"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="350dp"
+                    android:layout_height="match_parent"/>
+
+            </RelativeLayout>
+
+            <include
+                layout="@layout/_layout_navigation_bar"
+                android:id="@+id/buttom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
 </RelativeLayout>
