--- a/app/src/main/res/layout/_official_layout_item_dashboard.xml
+++ b/app/src/main/res/layout/_official_layout_item_dashboard.xml
@@ -29,12 +29,28 @@
     </RelativeLayout>
 
     <TextView
+        android:textColor="@color/black"
+        android:text="Wren Montero Javier"
         android:layout_below="@+id/_imageContainer"
-        android:id="@+id/_title_id"
+        android:id="@+id/_name_id"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:textSize="10sp"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:breakStrategy="simple"/>
+
+    <TextView
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:text="SK, Kagawad"
+        android:layout_below="@+id/_name_id"
+        android:id="@+id/_possition_id"
+        android:layout_centerHorizontal="true"
         android:textSize="12sp"
-        android:text="Senior Citizen Ayuda"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAlignment="center"
