--- a/app/src/main/res/layout/activity_medicine_content.xml
+++ b/app/src/main/res/layout/activity_medicine_content.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.content.medicine.MedicineContent"
+    tools:context=".ui.content.medicine.ui.MedicineContent"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
