--- a/app/src/main/res/layout/activity_medicine_view.xml
+++ b/app/src/main/res/layout/activity_medicine_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C4C4C4"
-    tools:context=".ui.content.medicine.MedicineView">
+    tools:context=".ui.content.medicine.ui.MedicineView">
 
     <ImageView
         android:src="@drawable/med"
