--- a/app/src/main/res/layout/dashboard_view.xml
+++ b/app/src/main/res/layout/dashboard_view.xml
@@ -147,8 +147,9 @@
         android:paddingTop="10dp">
 
         <TextView
+            android:textColor="@color/black"
             android:textSize="15sp"
-            android:text="Service"
+            android:text="Barangay - Officials"
             android:gravity=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -193,7 +194,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_marginStart="20dp"
-                android:id="@+id/_serviceView"
+                android:id="@+id/_officialItemView"
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
